[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylogseq"
version = "0.0.1"
authors = [
  { name="Juan Pedro Pérez", email="jp.perez.alcantara@gmail.com" }
]
description = "A set of commands and a library to interact with a set of Logseq graphs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "marko",
  "click"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
